--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,3 +5,5 @@
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_DISPLAY_DRIVER_SSD1306=y
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
