--- a/config/includes/settings.dtsi
+++ b/config/includes/settings.dtsi
@@ -1,5 +1,10 @@
 // Make sure this file is included before all other files
+#include "zmk-helpers/key-labels/42.h"
 
+// Define key groups for 42-key Corne (same as infused-kim repo)
+#define KEYS_L LT0 LT1 LT2 LT3 LT4 LM0 LM1 LM2 LM3 LM4 LB0 LB1 LB2 LB3 LB4  // Left hand
+#define KEYS_R RT0 RT1 RT2 RT3 RT4 RM0 RM1 RM2 RM3 RM4 RB0 RB1 RB2 RB3 RB4  // Right hand  
+#define KEYS_T LH2 LH1 LH0 RH0 RH1 RH2                                         // Thumbs (42-key has 6 thumb keys)
 /*
  * Layer Tap Settings
  */
